--- a/2016/src/html/speakers.ejs
+++ b/2016/src/html/speakers.ejs
@@ -152,11 +152,12 @@ var page = {
 </div>
 
 <!-- Sessions -->
-<div class="overlay /is-expand">
+<div class="overlay /is-expand"><!-- `is-expand`で開く -->
   <div class="overlay-content">
     <button class="overlay-button">
       <svg xmlns="http://www.w3.org/2000/svg" class="overlay-icon"><use xlink:href="#close"></use></svg>
     </button>
+    <!-- Session detail & Speaker info-->
     <div class="session">
       <div class="session-speaker">
         <div class="session-speakerAvatar">
