--- a/2016/src/html/speakers.ejs
+++ b/2016/src/html/speakers.ejs
@@ -1,6 +1,14 @@
 <%
 var page = {
-  title: 'Speakers'
+  title: 'Speakers',
+  speakers: [
+    'douglascrockford',
+    'jasnell',
+    'bmeck',
+    'zcbenz',
+    'yoshuawuyts',
+    'mafintosh'
+  ]
 }
 %>
 <%- include('_layout/header', page) -%>
@@ -16,135 +24,12 @@ var page = {
 
     <div class="page-body speakers-body">
       <ul class="speakers-list">
+        <% page.speakers.forEach(function(speaker) { %>
         <li>
-          <a href="#https://github.com/douglascrockford" class="speaker">
-            <div class="speaker-image">
-              <div class="Hex">
-                <div class="Hex-outer">
-                  <div class="Hex-inner">
-                    <img src="img/pic-douglascrockford.jpg" class="Hex-image">
-                    <!--<img src="img/pic-douglascrockford.jpg" class="Hex-image">-->
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="speaker-info">
-              <p class="speaker-name">
-                Douglas Crockford
-              </p>
-              <p class="speaker-links">
-                @douglascrockford
-              </p>
-            </div>
-          </a>
+          <%- include('_partial/speaker', { id: speaker, speaker: speakers[speaker] }) -%>
         </li>
-        <li>
-          <a href="#https://twitter.com/jasnell" class="speaker">
-            <div class="speaker-image">
-              <div class="Hex">
-                <div class="Hex-outer">
-                  <div class="Hex-inner">
-                    <img src="img/pic-jasnell.jpg" class="Hex-image">
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="speaker-info">
-              <p class="speaker-name">
-                James Snell
-              </p>
-              <p class="speaker-links">
-                @jasnell
-              </p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#https://twitter.com/bradleymeck" class="speaker">
-            <div class="speaker-image">
-              <div class="Hex">
-                <div class="Hex-outer">
-                  <div class="Hex-inner">
-                    <img src="img/pic-bmeck.jpg" class="Hex-image">
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="speaker-info">
-              <p class="speaker-name">
-                Bradley Meck
-              </p>
-              <p class="speaker-links">
-                @bradleymeck
-              </p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#https://twitter.com/zcbenz" class="speaker">
-            <div class="speaker-image">
-              <div class="Hex">
-                <div class="Hex-outer">
-                  <div class="Hex-inner">
-                    <img src="img/pic-zcbenz.jpg" class="Hex-image">
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="speaker-info">
-              <p class="speaker-name">
-                Cheng Zhao
-              </p>
-              <p class="speaker-links">
-                @zcbenz
-              </p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#https://twitter.com/yoshuawuyts" class="speaker">
-            <div class="speaker-image">
-              <div class="Hex">
-                <div class="Hex-outer">
-                  <div class="Hex-inner">
-                    <img src="img/pic-yoshuawuyts.jpg" class="Hex-image">
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="speaker-info">
-              <p class="speaker-name">
-                Yoshua Wuyts
-              </p>
-              <p class="speaker-links">
-                @yoshuawuyts
-              </p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#https://twitter.com/mafintosh" class="speaker">
-            <div class="speaker-image">
-              <div class="Hex">
-                <div class="Hex-outer">
-                  <div class="Hex-inner">
-                    <img src="img/pic-mafintosh.jpg" class="Hex-image">
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="speaker-info">
-              <p class="speaker-name">
-                Mathias Buus
-              </p>
-              <p class="speaker-links">
-                @mafintosh
-              </p>
-            </div>
-          </a>
-        </li>
+        <% }); %>
       </ul>
-
     </div>
 
   </section>
