sponsorsもテンプレ化

--- a/2016/src/html/index.ejs
+++ b/2016/src/html/index.ejs
@@ -136,11 +136,7 @@ var page = {
       <h3 class="sponsors-grade">Platinum</h3>
       <ul class="sponsors-list">
         <li>
-          <div class="sponsor">
-            <a href="https://www.paypal.com/jp/webapps/mpp/merchant" target="_blank" class="sponsor-banner -platinum">
-              <img src="img/sponsors/paypal.png" alt="PayPal">
-            </a>
-          </div>
+          <%- include('./_partial/sponsor', { id: 'paypal', sponsor: sponsors.paypal, grade: 'pratinum' }) %>
         </li>
       </ul>
     </div>
@@ -148,25 +144,13 @@ var page = {
       <h3 class="sponsors-grade">Gold</h3>
       <ul class="sponsors-list">
         <li>
-          <div class="sponsor">
-            <a href="http://dwango.co.jp/" target="_blank" class="sponsor-banner -gold">
-              <img src="img/sponsors/dwango.png" alt="株式会社ドワンゴ">
-            </a>
-          </div>
+          <%- include('./_partial/sponsor', { id: 'dwango', sponsor: sponsors['dwango'], grade: 'gold' }) %>
         </li>
         <li>
-          <div class="sponsor">
-            <a href="http://recruit-tech.co.jp/" target="_blank" class="sponsor-banner -gold">
-              <img src="img/sponsors/r-tech.png" alt="リクルートテクノロジーズ">
-            </a>
-          </div>
+          <%- include('./_partial/sponsor', { id: 'r-tech', sponsor: sponsors['r-tech'], grade: 'gold' }) %>
         </li>
         <li>
-          <div class="sponsor">
-            <a href="http://www.yahoo.co.jp/" target="_blank" class="sponsor-banner -gold">
-              <img src="img/sponsors/yahoo.png" alt="ヤフー株式会社">
-            </a>
-          </div>
+          <%- include('./_partial/sponsor', { id: 'yahoo', sponsor: sponsors['yahoo'], grade: 'gold' }) %>
         </li>
       </ul>
     </div>
@@ -174,18 +158,10 @@ var page = {
       <h3 class="sponsors-grade">Silver</h3>
       <ul class="sponsors-list">
         <li>
-          <div class="sponsor">
-            <a href="https://www.pxgrid.com/" target="_blank" class="sponsor-banner -silver">
-              <img src="img/sponsors/pxgrid.png" alt="株式会社ピクセルグリッド">
-            </a>
-          </div>
+          <%- include('./_partial/sponsor', { id: 'pxgrid', sponsor: sponsors['pxgrid'], grade: 'silver' }) %>
         </li>
         <li>
-          <div class="sponsor">
-            <a href="http://sphinx-software.jp/" target="_blank" class="sponsor-banner -silver">
-              <img src="img/sponsors/sphinx.png" alt="Sphinx有限会社">
-            </a>
-          </div>
+          <%- include('./_partial/sponsor', { id: 'sphinx', sponsor: sponsors['sphinx'], grade: 'silver' }) %>
         </li>
       </ul>
     </div>
@@ -193,11 +169,7 @@ var page = {
       <h3 class="sponsors-grade">Media</h3>
       <ul class="sponsors-list">
         <li>
-          <div class="sponsor">
-            <a href="https://www.theport.jp/" target="_blank" class="sponsor-banner -silver">
-              <img src="img/sponsors/theport.png" alt="ポート株式会社">
-            </a>
-          </div>
+          <%- include('./_partial/sponsor', { id: 'theport', sponsor: sponsors['theport'], grade: 'media' }) %>
         </li>
       </ul>
     </div>
