--- a/2016/src/html/sponsors.ejs
+++ b/2016/src/html/sponsors.ejs
@@ -15,15 +15,12 @@ var page = {
   <section class="page sponsors">
     <h2 class="page-title sponsors-title"><%= page.title %></h2>
     <div class="page-body sponsors-body">
+
       <div class="sponsors-section">
         <h3 class="sponsors-grade">Platinum</h3>
         <ul class="sponsors-list">
           <li>
-            <div class="sponsor">
-              <a href="https://www.paypal.com/jp/webapps/mpp/merchant" target="_blank" class="sponsor-banner -platinum">
-                <img src="img/sponsors/paypal.png" alt="PayPal">
-              </a>
-            </div>
+            <%- include('./_partial/sponsor', { id: 'paypal', sponsor: sponsors.paypal, grade: 'pratinum' }) %>
           </li>
         </ul>
       </div>
@@ -31,25 +28,13 @@ var page = {
         <h3 class="sponsors-grade">Gold</h3>
         <ul class="sponsors-list">
           <li>
-            <div class="sponsor">
-              <a href="http://dwango.co.jp/" target="_blank" class="sponsor-banner -gold">
-                <img src="img/sponsors/dwango.png" alt="株式会社ドワンゴ">
-              </a>
-            </div>
+            <%- include('./_partial/sponsor', { id: 'dwango', sponsor: sponsors['dwango'], grade: 'gold' }) %>
           </li>
           <li>
-            <div class="sponsor">
-              <a href="http://recruit-tech.co.jp/" target="_blank" class="sponsor-banner -gold">
-                <img src="img/sponsors/r-tech.png" alt="リクルートテクノロジーズ">
-              </a>
-            </div>
+            <%- include('./_partial/sponsor', { id: 'r-tech', sponsor: sponsors['r-tech'], grade: 'gold' }) %>
           </li>
           <li>
-            <div class="sponsor">
-              <a href="http://www.yahoo.co.jp/" target="_blank" class="sponsor-banner -gold">
-                <img src="img/sponsors/yahoo.png" alt="ヤフー株式会社">
-              </a>
-            </div>
+            <%- include('./_partial/sponsor', { id: 'yahoo', sponsor: sponsors['yahoo'], grade: 'gold' }) %>
           </li>
         </ul>
       </div>
@@ -57,18 +42,10 @@ var page = {
         <h3 class="sponsors-grade">Silver</h3>
         <ul class="sponsors-list">
           <li>
-            <div class="sponsor">
-              <a href="https://www.pxgrid.com/" target="_blank" class="sponsor-banner -silver">
-                <img src="img/sponsors/pxgrid.png" alt="株式会社ピクセルグリッド">
-              </a>
-            </div>
+            <%- include('./_partial/sponsor', { id: 'pxgrid', sponsor: sponsors['pxgrid'], grade: 'silver' }) %>
           </li>
           <li>
-            <div class="sponsor">
-              <a href="http://sphinx-software.jp/" target="_blank" class="sponsor-banner -silver">
-                <img src="img/sponsors/sphinx.png" alt="Sphinx有限会社">
-              </a>
-            </div>
+            <%- include('./_partial/sponsor', { id: 'sphinx', sponsor: sponsors['sphinx'], grade: 'silver' }) %>
           </li>
         </ul>
       </div>
@@ -76,20 +53,10 @@ var page = {
         <h3 class="sponsors-grade">Media</h3>
         <ul class="sponsors-list">
           <li>
-            <div class="sponsor">
-              <a href="https://www.theport.jp/" target="_blank" class="sponsor-banner -silver">
-                <img src="img/sponsors/theport.png" alt="ポート株式会社">
-              </a>
-            </div>
+            <%- include('./_partial/sponsor', { id: 'theport', sponsor: sponsors['theport'], grade: 'media' }) %>
           </li>
         </ul>
       </div>
-
-      <!--<p class="sponsors-lead">協賛を希望される方は専用フォームよりお申し込みください。</p>-->
-      <!--<div class="sponsors-action">-->
-        <!--<a href="https://docs.google.com/forms/d/e/1FAIpQLSfNdD06sIUy5noreZ6yp_ZzMlAFoIRq51V1bFwtcuY4xh29Yw/viewform"-->
-           <!--class="Button -invert -cfs">Sponsorship</a>-->
-      <!--</div>-->
 
     </div>
 
