--- a/2016/src/html/about.ejs
+++ b/2016/src/html/about.ejs
@@ -1,6 +1,21 @@
 <%
 var page = {
-  title: 'About'
+  title: 'About',
+  members: [
+    'tito',
+    'watilde',
+    'vanx2',
+    'kysnm',
+    'leader22',
+    'nobisuke',
+    'sotayamashita',
+    'tako_black',
+    'martin',
+    'axross',
+    'ledsun',
+    'tgfjt',
+    'hiloki',
+  ]
 }
 %>
 <%- include('_layout/header', page) -%>
@@ -27,7 +42,6 @@ var page = {
               <div class="Hex-outer">
                 <div class="Hex-inner">
                   <img src="img/pic-yosuke.jpg" class="Hex-image">
-                  <!--<img src="img/pic-douglascrockford.jpg" class="Hex-image">-->
                 </div>
               </div>
             </div>
@@ -48,71 +62,13 @@ var page = {
       <h3 class="page-subhead">Team</h3>
       <div class="page-sectionBody">
         <ul class="team">
+          <% page.members.forEach(function(id) { %>
           <li>
             <div class="team-member">
-              <p class="team-memberName"><a href="https://twitter.com/tito_net" target="_blank">tito</a></p>
+              <p class="team-memberName"><a href="https://twitter.com/<%= members[id].url %>" target="_blank"><%= id %></a></p>
             </div>
           </li>
-          <li>
-            <div class="team-member">
-              <p class="team-memberName"><a href="https://twitter.com/watilde" target="_blank">watilde</a></p>
-            </div>
-          </li>
-          <li>
-            <div class="team-member">
-              <p class="team-memberName"><a href="https://twitter.com/vanx2" target="_blank">vanx2</a></p>
-            </div>
-          </li>
-          <li>
-            <div class="team-member">
-              <p class="team-memberName"><a href="https://twitter.com/kysnm" target="_blank">kysnm</a></p>
-            </div>
-          </li>
-          <li>
-            <div class="team-member">
-              <p class="team-memberName"><a href="https://twitter.com/leader22" target="_blank">leader22</a></p>
-            </div>
-          </li>
-          <li>
-            <div class="team-member">
-              <p class="team-memberName"><a href="https://twitter.com/n0bisuke" target="_blank">nobisuke</a></p>
-            </div>
-          </li>
-          <li>
-            <div class="team-member">
-              <p class="team-memberName"><a href="https://twitter.com/sota0805" target="_blank">sotayamashita</a></p>
-            </div>
-          </li>
-          <li>
-            <div class="team-member">
-              <p class="team-memberName"><a href="https://twitter.com/kohei_takata" target="_blank">tako_black</a></p>
-            </div>
-          </li>
-          <li>
-            <div class="team-member">
-              <p class="team-memberName"><a href="https://twitter.com/leichtgewicht" target="_blank">martin</a></p>
-            </div>
-          </li>
-          <li>
-            <div class="team-member">
-              <p class="team-memberName"><a href="https://twitter.com/axross_" target="_blank">axross</a></p>
-            </div>
-          </li>
-          <li>
-            <div class="team-member">
-              <p class="team-memberName"><a href="https://twitter.com/ledsun" target="_blank">ledsun</a></p>
-            </div>
-          </li>
-          <li>
-            <div class="team-member">
-              <p class="team-memberName"><a href="https://twitter.com/tgfjt" target="_blank">tgfjt</a></p>
-            </div>
-          </li>
-          <li>
-            <div class="team-member">
-              <p class="team-memberName"><a href="https://twitter.com/hiloki" target="_blank">hiloki</a></p>
-            </div>
-          </li>
+          <% }) %>
         </ul>
       </div>
     </div>
