navigationがjsで動くように

--- a/2016/src/html/index.ejs
+++ b/2016/src/html/index.ejs
@@ -19,7 +19,7 @@ var page = {
 <div class="cover">
 
   <header class="header cover-header">
-    <nav class="navigation /is-expand">
+    <nav class="navigation">
       <ul class="navigation-list cover-navigationList">
         <li><a href="about.html" class="navigation-target">About</a></li>
         <li><a href="speakers.html" class="navigation-target">Speakers</a></li>
