global変数の扱いをかえる

--- a/2016/src/html/_partial/speaker.ejs
+++ b/2016/src/html/_partial/speaker.ejs
@@ -1,3 +1,4 @@
+<% var speaker = speakers[id] %>
 <a href="<%= speaker.url %>" class="speaker">
   <div class="speaker-image">
     <div class="Hex">
