--- a/2016/src/html/_partial/sponsor.ejs
+++ b/2016/src/html/_partial/sponsor.ejs
@@ -1,3 +1,4 @@
+<% var sponsor = sponsors[id]; %>
 <div class="sponsor">
   <a href="<%= sponsor.url %>" target="_blank" class="sponsor-banner -<%= grade %>">
     <img src="img/sponsors/<%= id %>.png" alt="<%= sponsor.name %>">
