--- a/2016/src/html/speakers.ejs
+++ b/2016/src/html/speakers.ejs
@@ -26,7 +26,7 @@ var page = {
       <ul class="speakers-list">
         <% page.speakers.forEach(function(speaker) { %>
         <li>
-          <%- include('_partial/speaker', { id: speaker, speaker: speakers[speaker] }) -%>
+          <%- include('_partial/speaker', { id: speaker }) -%>
         </li>
         <% }); %>
       </ul>
