--- a/2016/src/html/sponsors.ejs
+++ b/2016/src/html/sponsors.ejs
@@ -20,7 +20,7 @@ var page = {
         <h3 class="sponsors-grade">Platinum</h3>
         <ul class="sponsors-list">
           <li>
-            <%- include('./_partial/sponsor', { id: 'paypal', sponsor: sponsors.paypal, grade: 'pratinum' }) %>
+            <%- include('./_partial/sponsor', { id: 'paypal', grade: 'pratinum' }) %>
           </li>
         </ul>
       </div>
@@ -28,13 +28,13 @@ var page = {
         <h3 class="sponsors-grade">Gold</h3>
         <ul class="sponsors-list">
           <li>
-            <%- include('./_partial/sponsor', { id: 'dwango', sponsor: sponsors['dwango'], grade: 'gold' }) %>
+            <%- include('./_partial/sponsor', { id: 'dwango', grade: 'gold' }) %>
           </li>
           <li>
-            <%- include('./_partial/sponsor', { id: 'r-tech', sponsor: sponsors['r-tech'], grade: 'gold' }) %>
+            <%- include('./_partial/sponsor', { id: 'r-tech', grade: 'gold' }) %>
           </li>
           <li>
-            <%- include('./_partial/sponsor', { id: 'yahoo', sponsor: sponsors['yahoo'], grade: 'gold' }) %>
+            <%- include('./_partial/sponsor', { id: 'yahoo', grade: 'gold' }) %>
           </li>
         </ul>
       </div>
@@ -42,10 +42,10 @@ var page = {
         <h3 class="sponsors-grade">Silver</h3>
         <ul class="sponsors-list">
           <li>
-            <%- include('./_partial/sponsor', { id: 'pxgrid', sponsor: sponsors['pxgrid'], grade: 'silver' }) %>
+            <%- include('./_partial/sponsor', { id: 'pxgrid', grade: 'silver' }) %>
           </li>
           <li>
-            <%- include('./_partial/sponsor', { id: 'sphinx', sponsor: sponsors['sphinx'], grade: 'silver' }) %>
+            <%- include('./_partial/sponsor', { id: 'sphinx', grade: 'silver' }) %>
           </li>
         </ul>
       </div>
@@ -53,7 +53,7 @@ var page = {
         <h3 class="sponsors-grade">Media</h3>
         <ul class="sponsors-list">
           <li>
-            <%- include('./_partial/sponsor', { id: 'theport', sponsor: sponsors['theport'], grade: 'media' }) %>
+            <%- include('./_partial/sponsor', { id: 'theport', grade: 'media' }) %>
           </li>
         </ul>
       </div>
