speakerのjsもとりあえず動くように

--- a/2016/src/html/_partial/speaker.ejs
+++ b/2016/src/html/_partial/speaker.ejs
@@ -1,5 +1,5 @@
 <% var speaker = speakers[id] %>
-<a href="<%= speaker.url %>" class="speaker">
+<a href="<%= speaker.url %>" class="speaker" data-key="<%= id %>">
   <div class="speaker-image">
     <div class="Hex">
       <div class="Hex-outer">
