--- a/2016/src/html/_partial/speaker-overlay.ejs
+++ b/2016/src/html/_partial/speaker-overlay.ejs
@@ -1,13 +1,6 @@
 <%
   var speaker = speakers[id];
-  // var session = sessions[id];
-  speaker.bio = 'Bio.....'
-  var session = {
-    time: '00:00-00:00',
-    room: 'A',
-    title: 'Session title',
-    summary: 'Session summary'
-  };
+  var session = sessions[id];
 %>
 <div class="overlay" data-key="<%= id %>">
   <div class="overlay-content">
