--- a/2016/src/html/_partial/timetable-conference.ejs
+++ b/2016/src/html/_partial/timetable-conference.ejs
@@ -1,7 +1,8 @@
 <div class="timetable -conference">
   <div class="timetable-caption">
     <h3 class="timetable-title">
-      Conference Day <span class="timetable-venue">at Markcity</span>              </h3>
+      Conference Day <span class="timetable-venue">at Markcity</span>
+    </h3>
     <p class="timetable-day">
       Nov 13
     </p>
@@ -103,8 +104,8 @@
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Keynote</p>
-        <p class="timetable-sessionSpeaker">Douglas Crockford</p>
+        <p class="timetable-sessionTitle"><%= sessions.douglascrockford.title %></p>
+        <p class="timetable-sessionSpeaker"><%= speakers.douglascrockford.name %></p>
       </div>
     </div>
   </div>
@@ -124,8 +125,8 @@
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Node.js and Web Standards</p>
-        <p class="timetable-sessionSpeaker">James M Snell</p>
+        <p class="timetable-sessionTitle"><%= sessions.jasnell.title %></p>
+        <p class="timetable-sessionSpeaker"><%= speakers.jasnell.name %></p>
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">Why to Standardize your READMEs</p>
@@ -139,8 +140,8 @@
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">The journey toward ES modules.</p>
-        <p class="timetable-sessionSpeaker">Bradley Farias</p>
+        <p class="timetable-sessionTitle"><%= sessions.bmeck.title %></p>
+        <p class="timetable-sessionSpeaker"><%= speakers.bmeck.name %></p>
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">Vue.js 2.0 サーバサイドレンダリング</p>
@@ -154,8 +155,8 @@
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Putting TV on the Internet</p>
-        <p class="timetable-sessionSpeaker">Mathias Buus</p>
+        <p class="timetable-sessionTitle"><%= sessions.mafintosh.title %></p>
+        <p class="timetable-sessionSpeaker"><%= speakers.mafintosh.name %></p>
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">React + Reduxを使った大規模商用サービスの開発</p>
@@ -179,8 +180,8 @@
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">boarding the tiny framework train</p>
-        <p class="timetable-sessionSpeaker">Yoshua Wuyts</p>
+        <p class="timetable-sessionTitle"><%= sessions.yoshuawuyts.title %></p>
+        <p class="timetable-sessionSpeaker"><%= speakers.yoshuawuyts.name %></p>
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">リアルタイムデプロイサービスNow（仮）</p>
@@ -194,8 +195,8 @@
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Electron</p>
-        <p class="timetable-sessionSpeaker">Cheng Zhao</p>
+        <p class="timetable-sessionTitle"><%= sessions.zcbenz.title %></p>
+        <p class="timetable-sessionSpeaker"><%= speakers.zcbenz.name %></p>
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">PostCSS: Build your own CSS processor</p>
