--- a/2016/src/html/sponsors.ejs
+++ b/2016/src/html/sponsors.ejs
@@ -20,7 +20,7 @@ var page = {
         <h3 class="sponsors-grade">Platinum</h3>
         <ul class="sponsors-list">
           <li>
-            <%- include('./_partial/sponsor', { id: 'paypal', grade: 'pratinum' }) %>
+            <%- include('./_partial/sponsor', { id: 'paypal', grade: 'platinum' }) %>
           </li>
         </ul>
       </div>
