--- a/2016/src/scss/main.scss
+++ b/2016/src/scss/main.scss
@@ -87,7 +87,7 @@ body {
   line-height: $line-normal;
   font-family: $type-base;
   color: $color-inky;
-  overflow-x: hidden; // DEV
+  //overflow-x: hidden; // DEV
   background-color: $color-whitefog;
   background-image: linear-gradient(to bottom,
     rgba($color-whitefog,1) 0%,
@@ -489,6 +489,9 @@ $hex-image: $hex-canvas * $hex-ratio;
 }
 
 // Home
+.home {
+  overflow: hidden;
+}
 .home-intro {
   position: relative;
   z-index: 1;
@@ -499,7 +502,7 @@ $hex-image: $hex-canvas * $hex-ratio;
   }
 }
 .home-mountain {
-  display: none; // dev
+  //display: none; // dev
   $mountain-ratio: 0.57890625;
   position: absolute;
   top: 0;
